add all the functionnality (bug) + code structure

--- a/ServletPart/accueil.html
+++ b/ServletPart/accueil.html
@@ -34,8 +34,8 @@
   <body class="text-center">
     
 <main class="form-signin">
-  <form action="process.jsp" method="post">
-    <img class="mb-4" src="./assets/brand/bootstrap-logo.svg" alt="" width="72" height="57">
+  <form action="processlogin.jsp" method="post">
+    <img class="mb-4" src="./assets/img/library.png" alt="" width="72" height="57">
     <h1 class="h3 mb-3 fw-normal">Please login</h1>
 
     <div class="form-floating">
