--- a/ServletPart/accueil.html
+++ b/ServletPart/accueil.html
@@ -34,7 +34,7 @@
   <body class="text-center">
     
 <main class="form-signin">
-  <form action="processlogin.jsp" method="post">
+  <form action="Login" method="post">
     <img class="mb-4" src="./assets/img/library.png" alt="" width="72" height="57">
     <h1 class="h3 mb-3 fw-normal">Please login</h1>
 
